--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "scripts": {
     "postinstall": "yarn audit",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest --watch"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -35,14 +36,19 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "eslint": "^5.10.0",
     "eslint-config-google": "^0.11.0",
+    "eslint-plugin-jest": "^22.1.2",
     "husky": "^1.3.0",
+    "jest": "^23.6.0",
+    "nock": "^10.0.4",
     "prettier": "^1.15.3",
-    "pretty-quick": "^1.8.0"
+    "pretty-quick": "^1.8.0",
+    "supertest": "^3.3.0"
   },
   "husky": {
     "hooks": {
@@ -64,7 +70,11 @@
     "parserOptions": {
       "ecmaVersion": 8
     },
+    "plugins": [
+      "jest"
+    ],
     "extends": [
+      "plugin:jest/recommended",
       "eslint:recommended",
       "google"
     ],
